--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -7,6 +7,8 @@ disabled_rules:
     - unneeded_override      # 필요없는 오버라이드 메서드 관련 규칙
     - todo                   # todo 작성 시 워닝 규칙
     - unused_closure_parameter # 클로저 파라미터 관련 규칙
+    - multiple_closures_with_trailing_closure # 여러 클로저가 전달되는데 마지막 클로저만 트레일링 클로저 구문을 사용하는 경우 워닝 규칙
+    - comment_spacing # 주석 뒤에 최소한 하나의 공백이 있어야 한다는 규칙
 
 # 선택적으로 활성화할 규칙들 (기본 설정에 없으나 유용한 규칙들)
 opt_in_rules:
