--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -9,7 +9,7 @@ disabled_rules:
     - unused_closure_parameter # 클로저 파라미터 관련 규칙
     - multiple_closures_with_trailing_closure # 여러 클로저가 전달되는데 마지막 클로저만 트레일링 클로저 구문을 사용하는 경우 워닝 규칙
     - comment_spacing # 주석 뒤에 최소한 하나의 공백이 있어야 한다는 규칙
-
+    - empty_count # == 0 대신 .isEmpty 로 비교하라는 규칙
 # 선택적으로 활성화할 규칙들 (기본 설정에 없으나 유용한 규칙들)
 opt_in_rules:
     - empty_count               # .count == 0 대신 .isEmpty 권장하는 규칙
@@ -54,3 +54,4 @@ identifier_name:
 nesting:
     type_level:
         warning: 3
+
