--- a/Gathering/Resource/Info.plist
+++ b/Gathering/Resource/Info.plist
@@ -2,21 +2,37 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleIdentifier</key>
-	<string></string>
-	<key>UIAppFonts</key>
-	<array>
-		<string>PartialSansKR-Regular.otf</string>
-		<string>Mungyeong-Gamhong-Apple.otf</string>
-	</array>
 	<key>APIKey</key>
 	<string>$(API_KEY)</string>
 	<key>BaseURL</key>
 	<string>http://$(Base_URL)</string>
+	<key>KakaoAppKey</key>
+	<string>$(KAKAO_APP_KEY)</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>kakao1cf59f8b2ee91c6854c796eebd3186b7</string>
+			</array>
+		</dict>
+	</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>kakaokompassauth</string>
+		<string>kakaolink</string>
+	</array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>PartialSansKR-Regular.otf</string>
+		<string>Mungyeong-Gamhong-Apple.otf</string>
+	</array>
 </dict>
 </plist>
